<resources>
    <!--title-->
    <string name="title_app">Smart Logistic</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_order">Order</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_depart">Berangkat</string>
    <string name="title_arrive">Tiba</string>
    <string name="title_break">Istirahat</string>
    <string name="title_new_search">Pencarian baru</string>
    <string name="title_saved_search">Pencarian tersimpan</string>

    <!--label-->
    <string name="label_onboarding_title_1">Pembayaran Cepat</string>
    <string name="label_onboarding_title_2">Ongkos Kirim Terjangkau</string>
    <string name="label_onboarding_title_3">Pelabuhan Indonesia</string>
    <string name="label_onboarding_text_1">Metode bayar yang lengkap dan proses cepat, aman untuk melakukan pembayaran karena menggunakan e-Payment. </string>
    <string name="label_onboarding_text_2">Puluhan pelabuhan di Indonesia yang terdaftar di aplikasi Smart Logistic untuk pengiriman dan penerimaan jasa ke seluruh Indonesia.</string>
    <string name="label_onboarding_text_3">Solusi untuk pengiriman dan penerimaan jasa ke Seluruh Indonesia melalui jalur laut dari pelabuhan ke pelabuhan.</string>
    <string name="label_login_or_signup">Solusi untuk pengiriman dan penerimaan jasa ke Seluruh Indonesia melalui jalur laut dari pelabuhan ke pelabuhan.</string>
    <string name="label_cek_ongkir">Cek Tarif Pengiriman</string>
    <string name="label_send_from">Dari Pelabuhan</string>
    <string name="label_send_to">Ke Pelabuhan</string>

    <!--action-->
    <string name="action_register">Daftar</string>
    <string name="action_login">Masuk</string>
    <string name="action_order_search">Cari Pesanan</string>
    <string name="action_cek_ongkir">Cek Tarif Pengiriman</string>

    <!--hint-->
    <string name="hint_order_no">Nomor Pesanan</string>
    <string name="new_search">This is new search fragment</string>
    <string name="saved_search">This is saved search fragment</string>

    <string name="asign">Masukkan Nomor HP Anda yang telah terdaftar di Aplikasi Smart Logistic.</string>
    <string name="register">Daftarkan akun Anda untuk bisa masuk ke dalam Aplikasi Smart Logistic.</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="join">Belum punya akun? </string>
    <string name="id_phone_code">+62</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ask_account">Sudah punya akun?</string>
    <string name="email">Email</string>
    <string name="asign_otp">Masukkan kode OTP yang telah kami kirim ke Nomor HP 08131214151617.</string>
    <string name="comma">,&#160;</string>
    <string name="dash">&#160;-&#160;</string>
    <string name="personal">Personal</string>
    <string name="colaboration">Kolaborasi</string>
    <string name="port_sender">Pelabuhan Pengirim</string>
    <string name="port_receiver">Pelabuhan Penerima</string>
    <string name="loading_date">Tanggal Loading</string>
    <string name="order">Pesan</string>

    <!--dummies-->
    <string name="port_1">Pelabuhan Merak</string>
    <string name="port_2">Pelabuhan Kalimas</string>
    <string name="port_3">Pelabuhan Sunda Kelapa</string>
    <string name="port_4">Pelabuhan Bakauheni</string>

</resources>