<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_order"
        android:enabled="true"
        android:icon="@drawable/ic_order"
        android:title="@string/title_order"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />

</menu>